--- a/src/config/test.env
+++ b/src/config/test.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URL=mongodb://127.0.0.1:27017/quizz-api
+MONGODB_URL=mongodb://127.0.0.1:27017/quizz-api-test
 JWT_SECRET=thissecretkey
